fix: social button alignment

--- a/src/features/user/ProfileV2/styles/MyProfile.module.scss
+++ b/src/features/user/ProfileV2/styles/MyProfile.module.scss
@@ -39,3 +39,9 @@
         font-weight: bold;
     }
 }
+
+.socialPlatformOptionConatiner {
+    display: flex;
+    gap: 10px;
+    align-items: baseline;
+}
